--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     // определяет то какие импорты будут 
     "moduleResolution": "node",
     //  для абсолютного импорта
-    "baseUrl": ".",
+    // "baseUrl": ".",
     // позволяет работать с пакетами которы используют common js как с обычным покетом с помощью (import require() modeule.export) = common js
     "esModuleInterop": true,
     // Если какая либо библиотека не имеет default export, лодеры вроде ts-loader или babel-loader атоматически создают их вместо импорта
