Add css enhancements, also add a plugin to put the css code into separate files, and a css module setting to isolate the styles, and under the tsconfig setting

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "module": "es6",
     // указываем стандарт в который код будет компилироваться
     "target": "es5",
-    "jsx": "react",
+    "jsx": "react-jsx",
     // компилятор будет обрабатывать не только ts файлы но и js файлы
     "allowJs": true,
     // определяет то какие импорты будут 
