Add, react-router-dom installation, routing, and splitting the project into chunks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     // подсвечивает места где не указан тип
     "noImplicitAny": true,
     // указываем модульную сборку
-    "module": "es6",
+    "module": "esnext",
     // указываем стандарт в который код будет компилироваться
     "target": "es5",
     "jsx": "react-jsx",
