--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
 	"stylelint.enable": true,
 	"css.validate": true,
 	"scss.validate": true,
-	"stylelint.validate": ["css", "scss"]
+	"stylelint.validate": ["css", "scss"],
+	"eslint.enable": true
 }
