--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
 	"css.validate": true,
 	"scss.validate": true,
 	"stylelint.validate": ["css", "scss"],
-	"eslint.enable": true
+	"eslint.enable": true,
+	"jestrunner.configPath": "/config/jest/jest.config.ts"
 }
