--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,17 +22,17 @@ jobs:
       - name: build production project
         run: npm run build:prod
         if: always()
-      - name: linting typescript
-        run: npm run lint:ts
-        if: always()
-      - name: linting css
-        run: npm run lint:scss
-      - name: unit testing
-        if: always()
-        run: npm run test:unit
-      - name: build storybook
-        run: npm run storybook:build
-        if: always()
-      - name: screenshot testing
-        run: npm run test:ui:ci
-        if: always()
+      # - name: linting typescript
+      #   run: npm run lint:ts
+      #   if: always()
+      # - name: linting css
+      #   run: npm run lint:scss
+      # - name: unit testing
+      #   if: always()
+      #   run: npm run test:unit
+      # - name: build storybook
+      #   run: npm run storybook:build
+      #   if: always()
+      # - name: screenshot testing
+      #   run: npm run test:ui:ci
+      #   if: always()
